2008-01-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged 24663:24709 from trunk.
	
2008-01-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpdatafactory.[ch]
	* app/widgets/gimpdatachooserdialog.[ch]: clean up code
	
2008-01-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged 24651:24662 from trunk.
	
2008-01-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Set up appearance of scratch display before showing
	it, to reduce flashing.
	
	* app/gui/gui-vtable.c
	* app/display/gimpdisplayshell.[ch]
	* app/display/gimpdisplay.[ch]
	
2008-01-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged 24626:24650 from trunk.
	
2008-01-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpdatafactory.c
	* app/widgets/gimpdatachooserdialog.c
	* libgimpconfig/gimpconfig-path.c: further development
	of data chooser.
	
2008-01-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged 24584:24625 from trunk.
	
2008-01-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Preliminary experimental implementation of data chooser
	functionality.

	* app/widgets/gimpdatachooserdialog.c
	* app/widgets/gimpdatachooserdialog.h: new files

	* app/core/gimpdatafactory.c
	* app/core/gimpdatafactory.h
	* app/actions/data-commands.c
	* app/actions/data-commands.h
	* app/actions/gradients-actions.c
	* app/actions/palettes-actions.c
	* app/actions/brushes-actions.c
	* app/actions/patterns-actions.c
	* app/widgets/Makefile.am
	* app/widgets/gimpdatafactoryview.c
	* app/widgets/gimpdatafactoryview.h
	* app/widgets/gimphelp-ids.h

2008-01-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell.h: remove extra code that got
	into this and broke the build.
	
2008-01-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell.[ch] 
	(gimp_display_shell_shrink_wrap_strict): New function to ensure
	correct shrink wrapping of an undecorated scratch image.

	* app/gui/gui-table.c (gui_scratch_display_create):